force-app/main/default/objects/MPAdjustment__c/MPAdjustment__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado que permite generar ajustes en las clases de condición reajustables de acuerdo al tipo de contrato al que pertenecen.</description>
    <label>Ajuste</label>
    <nameField>
        <label>Nombre Ajuste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ajustes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>