force-app/main/default/objects/MPAdjustment__c/fields/MPAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>MPAdjustmentType__c</fullName>
    <label>Adjustment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>