force-app/main/default/objects/MPAdjustment__c/fields/MPPeriod__c.field-meta.xml
<CustomField>
    <fullName>MPPeriod__c</fullName>
    <label>Periodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>