force-app/main/default/objects/MPAdjustment__c/fields/MPValue__c.field-meta.xml
<CustomField>
    <fullName>MPValue__c</fullName>
    <label>Valor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>