force-app/main/default/objects/MPAdjustment__c/recordTypes/MPInflationAdjustment.recordType-meta.xml
<RecordType>
    <fullName>MPInflationAdjustment</fullName>
    <active>true</active>
    <label>Ajuste por Inflación</label>
</RecordType>