force-app/main/default/objects/MPAdjustment__c/recordTypes/MPStrategicAdjustment.recordType-meta.xml
<RecordType>
    <fullName>MPStrategicAdjustment</fullName>
    <active>true</active>
    <label>Ajuste Estratégico</label>
</RecordType>