force-app/main/default/objects/MPAdjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MPPeriod__c</columns>
    <columns>MPValue__c</columns>
    <columns>MPExternalCode__c</columns>
    <columns>MPAdjustmentType__c</columns>
    <columns>MPUsabilityStatus__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>