force-app/main/default/objects/MPAdjustment__c/listViews/MPInflationAdjustments.listView-meta.xml
<ListView>
    <fullName>MPInflationAdjustments</fullName>
    <columns>NAME</columns>
    <columns>MPPeriod__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MPAdjustment__c.MPInflationAdjustment</value>
    </filters>
    <label>Ajustes por Inflación</label>
</ListView>