force-app/main/default/objects/MPAdjustment__c/listViews/MPStrategicAdjustments.listView-meta.xml
<ListView>
    <fullName>MPStrategicAdjustments</fullName>
    <columns>NAME</columns>
    <columns>MPPeriod__c</columns>
    <columns>MPValue__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MPAdjustment__c.MPStrategicAdjustment</value>
    </filters>
    <label>Ajustes Estratégicos</label>
</ListView>